Grammar/selectorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Grammar/selector.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class selectorParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, Misc=22, Integer=23, IntInterval=24, 
		Number=25, Double=26, PositiveDouble=27, TypeValue=28, Path=29, EntityId=30, 
		Bool=31, StringValue=32, MarkValue=33, FileReferrerValue=34, OpenSquareBrackets=35, 
		CloseSquareBrackets=36, OpenCurlyBrace=37, CloseCurlyBrace=38, Comma=39, 
		Equal=40, NumberKey=41, PositiveNumberKey=42, PositiveDoubleIntervalKey=43, 
		DoubleIntervalKey=44, IntIntervalKey=45, IntKey=46, JsonKey=47, TagKey=48, 
		TeamKey=49, AdvancementPath=50, NameSpace=51, TargetObjective=52, Jkey=53, 
		Jobject=54, Jpair=55, Jarray=56, Jvalue=57, AdvancementParameter=58;
	public const int
		RULE_int = 0, RULE_intInterval = 1, RULE_number = 2, RULE_positiveNumber = 3, 
		RULE_double = 4, RULE_positiveDouble = 5, RULE_doubleInterval = 6, RULE_positiveDoubleInterval = 7, 
		RULE_gamemodeValues = 8, RULE_entityId = 9, RULE_bool = 10, RULE_selectorTagValue = 11, 
		RULE_selectorTeamValue = 12, RULE_nameValue = 13, RULE_predicateValue = 14, 
		RULE_nameSpace = 15, RULE_targetObjective = 16, RULE_sortValues = 17, 
		RULE_jsonValue = 18, RULE_advancementValue = 19, RULE_scoreParameter = 20, 
		RULE_scoresValue = 21, RULE_selectorParameters = 22, RULE_parameter = 23;
	public static readonly string[] ruleNames = {
		"int", "intInterval", "number", "positiveNumber", "double", "positiveDouble", 
		"doubleInterval", "positiveDoubleInterval", "gamemodeValues", "entityId", 
		"bool", "selectorTagValue", "selectorTeamValue", "nameValue", "predicateValue", 
		"nameSpace", "targetObjective", "sortValues", "jsonValue", "advancementValue", 
		"scoreParameter", "scoresValue", "selectorParameters", "parameter"
	};

	private static readonly string[] _LiteralNames = {
		null, "'..'", "' '", "'dx='", "'dy='", "'dz='", "'survival'", "'creative'", 
		"'adventure'", "'spectator'", "'!'", "'arbitrary'", "'furthest'", "'nearest'", 
		"'random'", "'gamemode'", "'advancements='", "'scores='", "'name='", "'type='", 
		"'predicate='", "'sort='", null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "'['", "']'", "'{'", "'}'", "','", "'='", 
		null, null, "'distance='", null, "'level='", "'limit='", "'nbt='", "'tag='", 
		"'team='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "Misc", "Integer", 
		"IntInterval", "Number", "Double", "PositiveDouble", "TypeValue", "Path", 
		"EntityId", "Bool", "StringValue", "MarkValue", "FileReferrerValue", "OpenSquareBrackets", 
		"CloseSquareBrackets", "OpenCurlyBrace", "CloseCurlyBrace", "Comma", "Equal", 
		"NumberKey", "PositiveNumberKey", "PositiveDoubleIntervalKey", "DoubleIntervalKey", 
		"IntIntervalKey", "IntKey", "JsonKey", "TagKey", "TeamKey", "AdvancementPath", 
		"NameSpace", "TargetObjective", "Jkey", "Jobject", "Jpair", "Jarray", 
		"Jvalue", "AdvancementParameter"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "selector.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static selectorParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public selectorParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public selectorParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class IntContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Integer() { return GetToken(selectorParser.Integer, 0); }
		public IntContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_int; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterInt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitInt(this);
		}
	}

	[RuleVersion(0)]
	public IntContext @int() {
		IntContext _localctx = new IntContext(Context, State);
		EnterRule(_localctx, 0, RULE_int);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			Match(Integer);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntIntervalContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Integer() { return GetTokens(selectorParser.Integer); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Integer(int i) {
			return GetToken(selectorParser.Integer, i);
		}
		public IntIntervalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_intInterval; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterIntInterval(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitIntInterval(this);
		}
	}

	[RuleVersion(0)]
	public IntIntervalContext intInterval() {
		IntIntervalContext _localctx = new IntIntervalContext(Context, State);
		EnterRule(_localctx, 2, RULE_intInterval);
		try {
			State = 57;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 50;
				Match(Integer);
				State = 51;
				Match(T__0);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 52;
				Match(T__0);
				State = 53;
				Match(Integer);
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				{
				State = 54;
				Match(Integer);
				State = 55;
				Match(T__0);
				State = 56;
				Match(Integer);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Number() { return GetToken(selectorParser.Number, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterNumber(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitNumber(this);
		}
	}

	[RuleVersion(0)]
	public NumberContext number() {
		NumberContext _localctx = new NumberContext(Context, State);
		EnterRule(_localctx, 4, RULE_number);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			Match(Number);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PositiveNumberContext : ParserRuleContext {
		public PositiveNumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_positiveNumber; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterPositiveNumber(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitPositiveNumber(this);
		}
	}

	[RuleVersion(0)]
	public PositiveNumberContext positiveNumber() {
		PositiveNumberContext _localctx = new PositiveNumberContext(Context, State);
		EnterRule(_localctx, 6, RULE_positiveNumber);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 64;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 61;
					Match(T__1);
					}
					} 
				}
				State = 66;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 67;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 56L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 71;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 68;
					Match(T__1);
					}
					} 
				}
				State = 73;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DoubleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Double() { return GetToken(selectorParser.Double, 0); }
		public DoubleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_double; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterDouble(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitDouble(this);
		}
	}

	[RuleVersion(0)]
	public DoubleContext @double() {
		DoubleContext _localctx = new DoubleContext(Context, State);
		EnterRule(_localctx, 8, RULE_double);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			Match(Double);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PositiveDoubleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PositiveDouble() { return GetToken(selectorParser.PositiveDouble, 0); }
		public PositiveDoubleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_positiveDouble; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterPositiveDouble(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitPositiveDouble(this);
		}
	}

	[RuleVersion(0)]
	public PositiveDoubleContext positiveDouble() {
		PositiveDoubleContext _localctx = new PositiveDoubleContext(Context, State);
		EnterRule(_localctx, 10, RULE_positiveDouble);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			Match(PositiveDouble);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DoubleIntervalContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Double() { return GetTokens(selectorParser.Double); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Double(int i) {
			return GetToken(selectorParser.Double, i);
		}
		public DoubleIntervalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_doubleInterval; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterDoubleInterval(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitDoubleInterval(this);
		}
	}

	[RuleVersion(0)]
	public DoubleIntervalContext doubleInterval() {
		DoubleIntervalContext _localctx = new DoubleIntervalContext(Context, State);
		EnterRule(_localctx, 12, RULE_doubleInterval);
		try {
			State = 86;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 78;
				Match(Double);
				State = 79;
				Match(T__0);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 80;
				Match(T__0);
				State = 81;
				Match(Double);
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				{
				State = 82;
				Match(Double);
				State = 83;
				Match(T__0);
				State = 84;
				Match(Double);
				}
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 85;
				Match(Double);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PositiveDoubleIntervalContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PositiveDouble() { return GetTokens(selectorParser.PositiveDouble); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PositiveDouble(int i) {
			return GetToken(selectorParser.PositiveDouble, i);
		}
		public PositiveDoubleIntervalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_positiveDoubleInterval; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterPositiveDoubleInterval(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitPositiveDoubleInterval(this);
		}
	}

	[RuleVersion(0)]
	public PositiveDoubleIntervalContext positiveDoubleInterval() {
		PositiveDoubleIntervalContext _localctx = new PositiveDoubleIntervalContext(Context, State);
		EnterRule(_localctx, 14, RULE_positiveDoubleInterval);
		try {
			State = 96;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 88;
				Match(PositiveDouble);
				State = 89;
				Match(T__0);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 90;
				Match(T__0);
				State = 91;
				Match(PositiveDouble);
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				{
				State = 92;
				Match(PositiveDouble);
				State = 93;
				Match(T__0);
				State = 94;
				Match(PositiveDouble);
				}
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 95;
				Match(PositiveDouble);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GamemodeValuesContext : ParserRuleContext {
		public GamemodeValuesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gamemodeValues; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterGamemodeValues(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitGamemodeValues(this);
		}
	}

	[RuleVersion(0)]
	public GamemodeValuesContext gamemodeValues() {
		GamemodeValuesContext _localctx = new GamemodeValuesContext(Context, State);
		EnterRule(_localctx, 16, RULE_gamemodeValues);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 960L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntityIdContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EntityId() { return GetToken(selectorParser.EntityId, 0); }
		public EntityIdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entityId; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterEntityId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitEntityId(this);
		}
	}

	[RuleVersion(0)]
	public EntityIdContext entityId() {
		EntityIdContext _localctx = new EntityIdContext(Context, State);
		EnterRule(_localctx, 18, RULE_entityId);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(EntityId);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BoolContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Bool() { return GetToken(selectorParser.Bool, 0); }
		public BoolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bool; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterBool(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitBool(this);
		}
	}

	[RuleVersion(0)]
	public BoolContext @bool() {
		BoolContext _localctx = new BoolContext(Context, State);
		EnterRule(_localctx, 20, RULE_bool);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102;
			Match(Bool);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectorTagValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MarkValue() { return GetToken(selectorParser.MarkValue, 0); }
		public SelectorTagValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selectorTagValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterSelectorTagValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitSelectorTagValue(this);
		}
	}

	[RuleVersion(0)]
	public SelectorTagValueContext selectorTagValue() {
		SelectorTagValueContext _localctx = new SelectorTagValueContext(Context, State);
		EnterRule(_localctx, 22, RULE_selectorTagValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			Match(MarkValue);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectorTeamValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MarkValue() { return GetToken(selectorParser.MarkValue, 0); }
		public SelectorTeamValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selectorTeamValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterSelectorTeamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitSelectorTeamValue(this);
		}
	}

	[RuleVersion(0)]
	public SelectorTeamValueContext selectorTeamValue() {
		SelectorTeamValueContext _localctx = new SelectorTeamValueContext(Context, State);
		EnterRule(_localctx, 24, RULE_selectorTeamValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(MarkValue);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NameValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringValue() { return GetToken(selectorParser.StringValue, 0); }
		public NameValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nameValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterNameValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitNameValue(this);
		}
	}

	[RuleVersion(0)]
	public NameValueContext nameValue() {
		NameValueContext _localctx = new NameValueContext(Context, State);
		EnterRule(_localctx, 26, RULE_nameValue);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__9) {
				{
				State = 108;
				Match(T__9);
				}
			}

			State = 111;
			Match(StringValue);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PredicateValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FileReferrerValue() { return GetToken(selectorParser.FileReferrerValue, 0); }
		public PredicateValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_predicateValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.EnterPredicateValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IselectorListener typedListener = listener as IselectorListener;
			if (typedListener != null) typedListener.ExitPredicateValue(this);
		}
	}
